Http-client-branch: (WebSocket) tests & bugfixes